# twpa-jax

./: .gitignore  CLAUDE.md  PYTHON_FILE_CATALOGUE copy.md  PYTHON_FILE_CATALOGUE.md  README.md  jc_ipm_signal_sweep.csv  pyproject.toml  sitecustomize.py  tmp_benchmark_import_smoke.jl
.pytest_tmp_workflows/: test_circuit_save_load_round_tcurrent  test_consecutive_failures_do_ncurrent  test_fail_fast_does_not_retry_current  test_fold_skip_requires_arclencurrent  test_force_gain_computes_gain_current  test_force_gain_off_skips_gaincurrent  test_partial_continuation_failcurrent  test_read_chunk_rows_globalizecurrent
docs/: PRD.md  convergence_investigation_log.md  exported_julia_netlist_backend.md  ipm_twpa_35x35_all_backends_report.md  multistability_and_cli_trim_plan.md  new_twpa_solver_architecture.md  new_twpa_solver_conversion_validation.md  new_twpa_solver_physical_coupler_ipm_report.md  new_twpa_solver_production_readiness.md  new_twpa_solver_scaling_benchmark.md  new_twpa_solver_solver_comparison.md  old_julia_ipm_reference_exactness.md  pump_current_conversions.tex  ripple_pump_placement.md  runbook.md  scipy_least_squares_old_ipm_backend_milestone.md  workflows.md
experiments/: CLAUDE.md  benchmark_exp08_pump_schur_matrixfree.py  benchmark_exp08_pump_single_speedups.py  benchmark_gpu_lu.py  benchmark_jvp_device.py  benchmark_seven_designs_vs_jc.py  exp01_matrix_free_pump.py  exp02_harmonic_coeff_pump.py  exp03_gain_from_pump.py  exp04_known_parametric_gain_fixture.py  exp05_known_gain_sideband_matrix.py  exp06_synthetic_gamma_circuit_matrix.py  (+133 more)
twpa/: cli.py  (+1 more)
(+1745 files in other folders)
