[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "twpa-solver"
version = "0.1.0"
description = "TWPA/KITWPA harmonic-balance simulation tools"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "pandas",
  "scipy",
  "matplotlib",
  "pytest",
  "pypardiso",
]

[project.scripts]
twpa = "twpa.cli:main"

[tool.setuptools.packages.find]
where = ["src", "."]
include = ["twpa*", "twpa_solver*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
